kubernetes_minikube.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
  name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-backend
  template:
    metadata:
      labels:
        app: spring-boot-backend
    spec:
      containers:
        - image: imhoffbd/springbootbackend
          name: spring-boot-backend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-backend
  labels:
    run: spring-boot-backend
spec:
  ports:
    - port: 8080
      nodePort: 31000
  selector:
    app: spring-boot-backend
  type: NodePort
