kubernetes_minikube_ingress.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
  name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-backend
  template:
    metadata:
      labels:
        app: spring-boot-backend
    spec:
      containers:
        - image: imhoffbd/springbootbackend
          name: spring-boot-backend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-backend
  labels:
    run: spring-boot-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: spring-boot-backend
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spring-boot-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: spring-boot-backend
              servicePort: 8080
